# rdr-Launcher

./: README.md  README_RDR.md
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/winlator/cmod/: ExternalControllerBindingsActivity.java  OBBManager.java  RDRConfigHelper.java  RDRLauncherActivity.java  SettingsFragment.java
app/src/main/java/com/winlator/cmod/alsaserver/: ALSAClient.java  ALSAClientConnectionHandler.java
app/src/main/java/com/winlator/cmod/container/: Container.java
app/src/main/java/com/winlator/cmod/contentdialog/: ContentDialog.java
app/src/main/java/com/winlator/cmod/core/: DownloadProgressDialog.java  MSLink.java  Win32AppWorkarounds.java
app/src/main/java/com/winlator/cmod/inputcontrols/: ControllerManager.java  KeycodeArrays.java
app/src/main/java/com/winlator/cmod/sysvshm/: SysVSharedMemory.java
app/src/main/java/com/winlator/cmod/widget/: InputControlsView.java  TouchpadView.java
app/src/main/java/com/winlator/cmod/winhandler/: WinHandler.java
app/src/main/java/com/winlator/cmod/xconnector/: Client.java  XConnectorEpoll.java
app/src/main/java/com/winlator/cmod/xenvironment/components/: ALSAServerComponent.java
app/src/main/java/com/winlator/cmod/xserver/: InputDeviceManager.java  XServer.java
app/src/main/java/com/winlator/cmod/xserver/requests/: GrabRequests.java  WindowRequests.java
app/src/main/res/anim/: nav_layout_animation.xml  nav_row_fade_slide_in.xml
app/src/main/res/drawable/: ic_adreno_gpu_drivers.xml  ic_big_picture_mode.xml  ic_copy_dev_libs.xml  ic_expand_less.xml  icon_input_header.xml
app/src/main/res/layout/: about_dialog.xml  input_controls_dialog.xml  settings_fragment.xml  shortcut_list_item.xml
app/src/main/res/menu/: containers_menu.xml  shortcut_popup_menu.xml
gradle/: libs.versions.toml
input_controls/: Red Dead Redemption.icp
